[package]
name = "leviathan"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.30"
reqwest = { version = "0.12.5", default-features = false, features = ["http2", "gzip", "rustls-tls"] }
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["rt-multi-thread","macros", "fs", "signal" ] }
tokio-util = "0.7.11"
